Cambios en archivo html y css, modificacion de colores y plantilla creada

--- a/index.html
+++ b/index.html
@@ -1,21 +1,66 @@
-<html>
-    <head>
-        <meta charset="utf-8"/>
-        <link rel="stylesheet" href="CSS/main.css">
-        <script src="js/main.js"></script>
-        <title>Mariana gay</title>
-    </head>
+<!DOCTYPE html>
+<html lang="es">
 
-    <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Página de Fotografía</title>
+    <link rel="stylesheet" href="/css/main.css">
+</head>
 
-        <h1>Cualquier pendejada por escribir</h1>
+<body>
+    <header>
+        <h1>Fotografía Profesional</h1>
         <nav>
             <ul>
-
+                <li><a href="#home">Inicio</a></li>
+                <li><a href="#portfolio">Portafolio</a></li>
+                <li><a href="#contact">Contacto</a></li>
             </ul>
         </nav>
-        <section id="contenedor"></section>
+    </header>
 
+    <section id="home">
+        <h2>Bienvenidos</h2>
+        <p>Explora mi trabajo y contáctame para sesiones de fotos.</p>
+    </section>
 
-    </body>
-</html> 
+    <section id="portfolio">
+        <h2>Portafolio</h2>
+        <div class="gallery">
+            <img src="foto1.jpg" alt="Foto 1">
+            <img src="foto2.jpg" alt="Foto 2">
+            <img src="foto3.jpg" alt="Foto 3">
+        </div>
+    </section>
+
+    <section id="contact">
+        <h2>Contacto</h2>
+        <form id="contactForm">
+            <label for="name">Nombre:</label>
+            <input class="input" type="text" id="name" name="name" required>
+
+            <label for="email">Email:</label>
+            <input class="input" type="email" id="email" name="email" required>
+
+            <label for="message">Mensaje:</label>
+            <textarea class="input" id="message" name="message" required></textarea>
+
+            <button type="submit">Enviar</button>
+        </form>
+    </section>
+
+    <div id="menu_redes">
+        <a class="whatsapp" aria-label="Chat on WhatsApp" href="https://wa.me/3145203021"><img alt="Chat on WhatsApp" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/1200px-WhatsApp.svg.png" />
+            </a>
+    </div>
+
+    <footer>
+        <p>&copy; 2024 Fotografía Profesional. Todos los derechos reservados.</p>
+    </footer>
+
+    <script src="/js/main.js"></script>
+
+</body>
+
+</html>
