--- a/index.html
+++ b/index.html
@@ -9,15 +9,24 @@
 </head>
 
 <body>
+
+    <!-- Seccion del Header-->
     <header>
-        <h1>Fotografía Profesional</h1>
-        <nav>
-            <ul>
-                <li><a href="#home">Inicio</a></li>
-                <li><a href="#portfolio">Portafolio</a></li>
-                <li><a href="#contact">Contacto</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <div class="nav-left">
+                <span>Inicio</span>
+                <span>Portafolio</span>
+                <span>Nosotros</span>
+            </div>
+            <div class="logo">
+                <img src="logo.png" alt="logo">
+                <span>Logo</span>
+            </div>
+            <div class="nav-right">
+                <span>Contacto</span>
+                <span>Redes</span>
+            </div>
+        </div>
     </header>
 
     <section id="home">
