feat(index.html, main.css): add home section

--- a/index.html
+++ b/index.html
@@ -29,19 +29,18 @@
         </div>
     </header>
 
-    <section id="home">
-        <h2>Bienvenidos</h2>
-        <p>Explora mi trabajo y contáctame para sesiones de fotos.</p>
-    </section>
-
-    <section id="portfolio">
-        <h2>Portafolio</h2>
-        <div class="gallery">
-            <img src="foto1.jpg" alt="Foto 1">
-            <img src="foto2.jpg" alt="Foto 2">
-            <img src="foto3.jpg" alt="Foto 3">
-        </div>
-    </section>
+        <!-- Seccion de Inicio -->
+        <section class="hero">
+            <div class="hero-content">
+                <div class="hero-text">
+                    <h1>Fotografía Profesional</h1>
+                    <p>Bienvenidos a nuestro mundo a través del lente. Somos Julian y Mariana, y aquí encontrarás una colección de nuestros trabajos fotográficos más significativos. Capturamos momentos y emociones únicas, congelando fragmentos de tiempo para siempre. Explora nuestro portafolio y descubre la belleza en lo cotidiano y lo extraordinario.</p>
+                </div>
+                <div class="hero-image">
+                    <img src="/mnt/data/image.png" alt="Fotografía Ejemplo">
+                </div>
+            </div>
+        </section>
 
     <section id="contact">
         <h2>Contacto</h2>
