feat(index.html, main.css): add portfolio section for the galery

--- a/index.html
+++ b/index.html
@@ -42,6 +42,27 @@
             </div>
         </section>
 
+    <!-- Seccion del Portafolio -->
+    <div class="portfolio-section">
+        <h2>Portafolio</h2>
+        <div class="portfolio-item"> <!-- Slider 1 -->
+            <img src="ruta/a/imagen-retratos.jpg" alt="Retratos">
+            <div class="portfolio-text">Retratos</div>
+        </div>
+        <div class="portfolio-item"> <!-- Slider 2 -->
+            <img src="ruta/a/imagen-naturaleza.jpg" alt="Naturaleza">
+            <div class="portfolio-text">Naturaleza</div>
+        </div>
+        <div class="portfolio-item"> <!-- Slider 3 -->
+            <img src="ruta/a/imagen-urbano.jpg" alt="Urbano">
+            <div class="portfolio-text">Urbano</div>
+        </div>
+        <div class="portfolio-item"> <!-- Slider 4 -->
+            <img src="ruta/a/imagen-experimental.jpg" alt="Experimental">
+            <div class="portfolio-text">Experimental</div>
+        </div>
+    </div>
+
     <section id="contact">
         <h2>Contacto</h2>
         <form id="contactForm">
