--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
         <div class="hero-content">
             <div class="hero-text">
                 <h1>Fotografía Profesional</h1>
-                <p>Bienvenidos a nuestro mundo a través del lente. Somos Julian y Mariana, y aquí encontrarás una colección de nuestros trabajos fotográficos más significativos. Capturamos momentos y emociones únicas, congelando fragmentos de tiempo para siempre. Explora nuestro portafolio y descubre la belleza en lo cotidiano y lo extraordinario.</p>
+                <p>Bienvenidos a nuestro mundo a través del lente. Somos Julian y Mariana, y aquí encontrarás una
+                    colección de nuestros trabajos fotográficos más significativos. Capturamos momentos y emociones
+                    únicas, congelando fragmentos de tiempo para siempre. Explora nuestro portafolio y descubre la
+                    belleza en lo cotidiano y lo extraordinario.</p>
             </div>
             <div class="hero-image">
                 <img src="/mnt/data/image.png" alt="Fotografía Ejemplo">
@@ -62,11 +65,26 @@
             <div class="portfolio-text">Experimental</div>
         </div>
     </div>
-    
+
+    <!-- Línea divisora -->
+    <hr class="divider">
+
     <!-- Seccion Nosotros -->
-    <section class="about">
-        <h2>Sobre Nosotros</h2>
-        <p>Somos Julian y Mariana, apasionados por la fotografía. A través de nuestras cámaras, capturamos momentos únicos y emociones que cuentan historias. Nos especializamos en retratos, paisajes y fotografía urbana. Siempre en busca de nuevas historias y conectarnos con las personas a través de nuestras imágenes.</p>
+    <section class="about-section">
+        <div class="about-container">
+            <div class="about-video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/tu-video-id" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
+            <div class="about-text">
+                <h2>Sobre Nosotros</h2>
+                <p>Somos Julian y Mariana, apasionados por la fotografía. Cada imagen que capturamos es una ventana a
+                    nuestra perspectiva del mundo, reflejando nuestras experiencias y emociones. Nos especializamos en
+                    retratos, paisajes y fotografía urbana, siempre buscando contar historias y conectar con las
+                    personas a través de nuestras imágenes.</p>
+            </div>
+        </div>
     </section>
 
     <!--Seccion Contacto -->
@@ -91,7 +109,8 @@
 
     <!-- Boton de Whatsapp -->
     <div id="menu_redes">
-        <a class="whatsapp" aria-label="Chat on WhatsApp" href="https://wa.me/3145203021"><img alt="Chat on WhatsApp" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/1200px-WhatsApp.svg.png" />
+        <a class="whatsapp" aria-label="Chat on WhatsApp" href="https://wa.me/3145203021"><img alt="Chat on WhatsApp"
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/1200px-WhatsApp.svg.png" />
         </a>
     </div>
 
