update(css, html): portfolio and gallery

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- Sección del Header -->
     <header>
-        
+
         <div class="container">
             <div class="logo">
                 <img src="imagenes/logo1.jpg" alt="logo">
@@ -22,14 +22,14 @@
             <div class="nav">
                 <nav>
                     <ul>
-                      <li><button>Inicio</button></li>
-                      <li><button>Portafolio</button></li>
-                      <li><button>Nosotros</button></li>
-                      <li><button>Contacto</button></li>
-                      <li><button>Redes</button></li>
+                        <li><button>Inicio</button></li>
+                        <li><button>Portafolio</button></li>
+                        <li><button>Nosotros</button></li>
+                        <li><button>Contacto</button></li>
+                        <li><button>Redes</button></li>
                     </ul>
-                  </nav>
-                  
+                </nav>
+
             </div>
         </div>
     </header>
@@ -57,52 +57,45 @@
         </div>
     </section>
 
-    <!-- Sección del Portafolio -->
-    <section class="portfolio-section">
-        <h2>Portafolio</h2>
-        <div class="pswp-gallery pswp-gallery--single-column" id="gallery--getting-started">
-            <a href="https://cdn.photoswipe.com/photoswipe-demo-images/photos/2/img-2500.jpg" 
-              data-pswp-width="1669" 
-              data-pswp-height="2500" 
-              target="_blank">
-              <img src="https://cdn.photoswipe.com/photoswipe-demo-images/photos/2/img-200.jpg" alt="" />
-            </a>
-            <!-- cropped thumbnail: -->
-            <a href="https://cdn.photoswipe.com/photoswipe-demo-images/photos/7/img-2500.jpg" 
-              data-pswp-width="1875" 
-              data-pswp-height="2500" 
-              data-cropped="true" 
-              target="_blank">
-              <img src="https://cdn.photoswipe.com/photoswipe-demo-images/photos/7/img-200.jpg" alt="" />
-              Cropped
-            </a>
-            <!-- data-pswp-src with custom URL in href -->
-            <a href="https://unsplash.com" 
-              data-pswp-src="https://cdn.photoswipe.com/photoswipe-demo-images/photos/3/img-2500.jpg"
-              data-pswp-width="2500" 
-              data-pswp-height="1666" 
-              target="_blank">
-              <img src="https://cdn.photoswipe.com/photoswipe-demo-images/photos/3/img-200.jpg" alt="" />
-            </a>
-            <!-- Without thumbnail: -->
-            <a href="http://example.com" 
-              data-pswp-src="https://cdn.photoswipe.com/photoswipe-demo-images/photos/5/img-2500.jpg"
-              data-pswp-width="2500" 
-              data-pswp-height="1668" 
-              target="_blank">
-              No thumbnail
-            </a>
-            <!-- wrapped with any element: -->
-            <div>
-              <a href="https://cdn.photoswipe.com/photoswipe-demo-images/photos/6/img-2500.jpg"
-                data-pswp-width="2500" 
-                data-pswp-height="1667" 
-                target="_blank">
-                <img src="https://cdn.photoswipe.com/photoswipe-demo-images/photos/6/img-200.jpg" alt="" />
-              </a>
+   <!-- Sección del Portafolio -->
+<section class="portfolio-section">
+    <h2>Portafolio</h2>
+    <div class="gallery-container">
+        <div class="gallery">
+            <div class="photo-gallery">
+                <img src="https://cdn.photoswipe.com/photoswipe-demo-images/photos/2/img-200.jpg" alt="">
             </div>
-          </div>
-    </section>
+            <div class="text-gallery">
+                <p>Retratos</p>
+            </div>
+        </div>
+        <div class="gallery">
+            <div class="photo-gallery">
+                <img src="https://cdn.photoswipe.com/photoswipe-demo-images/photos/2/img-200.jpg" alt="">
+            </div>
+            <div class="text-gallery">
+                <p>Retratos</p>
+            </div>
+        </div>
+        <div class="gallery">
+            <div class="photo-gallery">
+                <img src="https://cdn.photoswipe.com/photoswipe-demo-images/photos/2/img-200.jpg" alt="">
+            </div>
+            <div class="text-gallery">
+                <p>Retratos</p>
+            </div>
+        </div>
+        <div class="gallery">
+            <div class="photo-gallery">
+                <img src="https://cdn.photoswipe.com/photoswipe-demo-images/photos/2/img-200.jpg" alt="">
+            </div>
+            <div class="text-gallery">
+                <p>Retratos</p>
+            </div>
+        </div>
+    </div>
+</section>
+
 
     <!-- Línea divisora -->
     <hr class="divider">
@@ -144,11 +137,12 @@
             <button class="bt_enviar" type="submit">Enviar</button>
         </form>
     </section>
- 
+
     <!-- Botón de WhatsApp -->
     <div id="menu_redes">
         <a class="whatsapp" aria-label="Chat on WhatsApp" href="https://wa.me/3145203021">
-            <img alt="Chat on WhatsApp" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/1200px-WhatsApp.svg.png" />
+            <img alt="Chat on WhatsApp"
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/1200px-WhatsApp.svg.png" />
         </a>
     </div>
 
