--- a/index.html
+++ b/index.html
@@ -57,56 +57,58 @@
         </div>
     </section>
 
-   <!-- Sección del Portafolio -->
-<section class="portfolio-section">
-    <h2>Portafolio</h2>
-    <div class="gallery-container">
-        <div class="gallery">
-            <div class="photo-gallery">
-                <img src="https://cdn.photoswipe.com/photoswipe-demo-images/photos/2/img-200.jpg" alt="">
+    <!-- Sección del Portafolio -->
+    <section class="portfolio-section">
+        <h2>Portafolio</h2>
+        <div class="gallery-container">
+            <div class="gallery">
+                <div class="photo-gallery">
+                    <img src="https://cdn.photoswipe.com/photoswipe-demo-images/photos/2/img-200.jpg" alt="">
+                </div>
+                <div class="text-gallery">
+                    <p>Retratos</p>
+                </div>
             </div>
-            <div class="text-gallery">
-                <p>Retratos</p>
+            <div class="gallery">
+                <div class="photo-gallery">
+                    <img src="https://cdn.photoswipe.com/photoswipe-demo-images/photos/2/img-200.jpg" alt="">
+                </div>
+                <div class="text-gallery">
+                    <p>Retratos</p>
+                </div>
+            </div>
+            <div class="gallery">
+                <div class="photo-gallery">
+                    <img src="https://cdn.photoswipe.com/photoswipe-demo-images/photos/2/img-200.jpg" alt="">
+                </div>
+                <div class="text-gallery">
+                    <p>Retratos</p>
+                </div>
+            </div>
+            <div class="gallery">
+                <div class="photo-gallery">
+                    <img src="https://cdn.photoswipe.com/photoswipe-demo-images/photos/2/img-200.jpg" alt="">
+                </div>
+                <div class="text-gallery">
+                    <p>Retratos</p>
+                </div>
             </div>
         </div>
-        <div class="gallery">
-            <div class="photo-gallery">
-                <img src="https://cdn.photoswipe.com/photoswipe-demo-images/photos/2/img-200.jpg" alt="">
-            </div>
-            <div class="text-gallery">
-                <p>Retratos</p>
-            </div>
-        </div>
-        <div class="gallery">
-            <div class="photo-gallery">
-                <img src="https://cdn.photoswipe.com/photoswipe-demo-images/photos/2/img-200.jpg" alt="">
-            </div>
-            <div class="text-gallery">
-                <p>Retratos</p>
-            </div>
-        </div>
-        <div class="gallery">
-            <div class="photo-gallery">
-                <img src="https://cdn.photoswipe.com/photoswipe-demo-images/photos/2/img-200.jpg" alt="">
-            </div>
-            <div class="text-gallery">
-                <p>Retratos</p>
-            </div>
-        </div>
-    </div>
-</section>
+    </section>
 
 
     <!-- Línea divisora -->
     <hr class="divider">
 
+
     <!-- Sección Nosotros -->
     <section class="about-section">
         <div class="about-container">
             <div class="about-video">
-                <iframe width="560" height="315" src="https://www.youtube.com/watch?v=dQw4w9WgXcQ" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/AuKR2fQbMBk?autoplay=1&loop=1&playlist=AuKR2fQbMBk&controls=0" 
+                title="YouTube video player" frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>            
             </div>
             <div class="about-text">
                 <h2>Sobre Nosotros</h2>
