fix(css): image gallery in portfolio

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
             </div>
             <div class="carousel">
                 <div class="carousel-imagenes">
-                    <img src="imagenes/20240126_054733.jpg" alt="imagen 1">
-                    <img src="imagenes/20240126_055403.jpg" alt="imagen 2">
-                    <img src="imagenes/IMG_1418.JPG" alt="imagen 3">
+                    <img src="imagenes/1920×1280/20240126_054733.jpg" alt="imagen 1">
+                    <img src="imagenes/1920×1280/20240126_055403.jpg" alt="imagen 2">
+                    <img src="imagenes/1920×1280/adventure-5077760_1920.jpg" alt="imagen 3">
                     <img src="imagenes/IMG_1507.JPG" alt="imagen 4">
                 </div>
                 <button class="prev" onclick="prevImage()">&lt;</button>
@@ -63,7 +63,7 @@
         <div class="gallery-container">
             <div class="gallery">
                 <div class="photo-gallery">
-                    <img src="https://cdn.photoswipe.com/photoswipe-demo-images/photos/2/img-200.jpg" alt="">
+                    <img src="imagenes/1920×2880/woman-8378634_1920.jpg" alt="">
                 </div>
                 <div class="text-gallery">
                     <p>Retratos</p>
@@ -71,30 +71,31 @@
             </div>
             <div class="gallery">
                 <div class="photo-gallery">
-                    <img src="https://cdn.photoswipe.com/photoswipe-demo-images/photos/2/img-200.jpg" alt="">
+                    <img src="imagenes/1920×2880/lizard-7938887_1920.jpg" alt="">
                 </div>
                 <div class="text-gallery">
-                    <p>Retratos</p>
+                    <p>Naturaleza</p>
                 </div>
             </div>
             <div class="gallery">
                 <div class="photo-gallery">
-                    <img src="https://cdn.photoswipe.com/photoswipe-demo-images/photos/2/img-200.jpg" alt="">
+                    <img src="imagenes/1920×2880/the-eiffel-tower-1744574_1920.jpg" alt="">
                 </div>
                 <div class="text-gallery">
-                    <p>Retratos</p>
+                    <p>Urbano</p>
                 </div>
             </div>
             <div class="gallery">
                 <div class="photo-gallery">
-                    <img src="https://cdn.photoswipe.com/photoswipe-demo-images/photos/2/img-200.jpg" alt="">
+                    <img src="imagenes/1920×2880/chimney-5437407_1920.jpg" alt="">
                 </div>
                 <div class="text-gallery">
-                    <p>Retratos</p>
+                    <p>Experimental</p>
                 </div>
             </div>
         </div>
     </section>
+
 
 
     <!-- Línea divisora -->
@@ -105,10 +106,11 @@
     <section class="about-section">
         <div class="about-container">
             <div class="about-video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/AuKR2fQbMBk?autoplay=1&loop=1&playlist=AuKR2fQbMBk&controls=0" 
-                title="YouTube video player" frameborder="0" 
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>            
+                <iframe width="560" height="315"
+                    src="https://www.youtube.com/embed/AuKR2fQbMBk?autoplay=1&loop=1&playlist=AuKR2fQbMBk&controls=0"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <div class="about-text">
                 <h2>Sobre Nosotros</h2>
