Cambios en el header y carousel

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
                       <li><button>Contacto</button></li>
                       <li><button>Redes</button></li>
                     </ul>
-                  </nav>
-                  
+                  </nav>   
             </div>
         </div>
     </header>
@@ -45,14 +44,14 @@
                     belleza en lo cotidiano y lo extraordinario.</p>
             </div>
             <div class="carousel">
-                <div class="carousel-imagenes">
-                    <img src="imagenes/20240126_054733.jpg" alt="imagen 1">
-                    <img src="imagenes/20240126_055403.jpg" alt="imagen 2">
-                    <img src="imagenes/IMG_1418.JPG" alt="imagen 3">
-                    <img src="imagenes/IMG_1507.JPG" alt="imagen 4">
+                <div class="carousel-images">
+                    <img src="/imagenes/20221225_151646.jpg" alt="Imagen 1">
+                    <img src="/imagenes/20230609_165810.jpg" alt="Imagen 2">
+                    <img src="/imagenes/20240126_054733.jpg" alt="Imagen 3">
+                    <img src="/imagenes/20240126_055403.jpg" alt="Imagen 4">
                 </div>
-                <button class="prev" onclick="prevImage()">&lt;</button>
-                <button class="next" onclick="nextImage()">&gt;</button>
+                <button class="prev">◀</button>
+                <button class="next">▶</button>
             </div>
         </div>
     </section>
