--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                     <img src="imagenes/1920×1280/adventure-5077760_1920.jpg" alt="imagen 3">
                     <img src="imagenes/IMG_1507.JPG" alt="imagen 4">
                 </div>
-                <button class="prev">◀</button>
-                <button class="next">▶</button>
+                <button class="prev" onclick="prevImage()">&lt;</button>
+                <button class="next" onclick="nextImage()">&gt;</button>
             </div>
         </div>
     </section>
