bordes, tipografía y colores

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
         </div>
     </section>
 
-    <!-- Línea Divisora -->
+    <!-- Línea Divisora
     <div class="decorative-divider">
         <hr class="divider">
-    </div>
+    </div> -->
 
     <!-- Sección del Portafolio -->
     <section id="portafolio" class="portfolio-section">
@@ -99,8 +99,10 @@
         </div>
     </section>
 
-    <!-- Línea Divisora -->
-    <hr class="divider">
+    <!-- Línea Divisora 
+    <div class="decorative-divider">
+        <hr class="divider">
+    </div> -->
 
     <!-- Sección Nosotros -->
     <section id="nosotros" class="about-section">
@@ -121,6 +123,11 @@
             </div>
         </div>
     </section>
+
+    <!-- Línea Divisora 
+    <div class="decorative-divider">
+        <hr class="divider">
+    </div> -->
 
     <!-- Sección Contacto -->
     <section id="contacto" class="contact">
